# SIMS-Writer

./: .gitignore  ADR-0001-repository-as-single-source-of-truth.md  ADR-0005-quality-by-design.md  CHANGELOG.md  CONTRIBUTING.md  FILE_MANIFEST.txt  LICENSE  MIGRATION_GUIDE_v0.2.0.md  MIGRATION_GUIDE_v0.2.0_FINAL.md  QUALITY_FREEZE_REPORT_v0.2.0.md  README (1).md  README.md  RELEASE.md  RELEASE_ACCEPTANCE_v0.15.3-alpha.1.md  RELEASE_ACCEPTANCE_v0.15.4-alpha.1.md  RELEASE_ACCEPTANCE_v0.16.0-alpha.1.md  RELEASE_NOTES_v0.2.0_FINAL.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.3_KNOWLEDGE_SCOPE_HOTFIX.md  RELEASE_NOTES_v1.1.4_WRITER_IDENTITY_HOTFIX.md  SHA256SUMS.txt  USER_TEST_RC1_RELEASE_NOTES.md  VALIDATION_REPORT.md  VALIDATION_REPORT_v0.2.0-alpha.1.json  VERSION  adr-template.md  change-request-template.md  contract-template.md  golden-example-template.md  knowledge-item-template.md  manifest.json  pattern-template.md  pyproject.toml  pytest.ini  quality-rule-template.yaml  requirements.txt
claude/: CLAUDE_PROJECT_INSTRUCTIONS.md  FILE_MANIFEST.txt  README.md  REAL_ARTICLE_UAT_RESULT_TEMPLATE.json  SETUP_GUIDE.md  SHA256SUMS.txt  TEST_CHECKLIST.md  USER_TEST_REHEARSAL.md  manifest.json
decisions/: ADR-0009-decision-layer-between-knowledge-and-pattern.md  ADR-0010-decision-gated-pattern-selection.md  ADR-0011-runtime-core-as-contract-controlled-pipeline.md  ADR-0012-provider-neutral-model-adapter.md  ADR-0013-executable-quality-rules-with-explicit-unverifiable-state.md  ADR-0014-targeted-refinement-before-regeneration.md  (+5 more)
shared/: SOURCE.md  (+1 more)
(+502 files in other folders)
