[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sims-writer"
version = "0.5.0"
description = "Contract-driven runtime for publish-ready article improvement workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["."]
